testsuite/tests/indexed-types/should_fail/T5934.stderr

T5934.hs:12:7: error:
    • Couldn't match expected type ‘(forall s. GenST s) -> Int’
                  with actual type ‘a0’
      Cannot instantiate unification variable ‘a0’
      with a type involving polytypes: (forall s. GenST s) -> Int
    • In the expression: 0
      In an equation for ‘run’: run = 0
